k8s-v2/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basic3tier
  namespace: basic3tier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basic3tier
  template:
    metadata:
      labels:
        app: basic3tier
    spec:
      containers:
      - image: arnomarais/k8s-ui:v1
        name: basic3tier
        ports:
        - containerPort: 80
