k8s-v2/backend-clusterservice.yml
apiVersion: v1
kind: Service
metadata:
  name: basic3tier-api-ui
  namespace: basic3tier
spec:
  type: ClusterIP  
  selector:
    app: basic3tier-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
