k8s-v2/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: basic3tier-api-service
  namespace: basic3tier
spec:
  type: NodePort  
  selector:
    app: basic3tier-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30081
