k8s-v2/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: basic3tier-ui-service
  namespace: basic3tier
spec:
  type: NodePort  
  selector:
    app: basic3tier-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30080
