k8s-v2/postgres-clusterservice.yml
apiVersion: v1
kind: Service
metadata:
  name: basic3tier
  namespace: basic3tier
spec:
  type: ClusterIP  
  selector:
    app: basic3tier
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
