k8s-v2/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic3tier-ingress
  namespace: basic3tier
spec:
  ingressClassName: 'nginx'
  rules:
  - host: ip-172-31-25-130.ap-southeast-2.compute.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: basic3tier-ui-service
            port:
              number: 5000
